tests/fixtures/valid_programs/array_access.cryo
namespace Main;

import IO from <io/stdio>;

function main() -> int {
    // Array literals
    const numbers: int[] = [1, 2, 3, 4, 5];
    const names: string[] = ["Alice", "Bob", "Charlie"];
    const empty: int[] = [];
    
    // Array access
    const first: int = numbers[0];
    const second_name: string = names[1];
    
    IO::println("Array Access Test:");
    IO::print_int(first);      // 1
    IO::println(second_name);  // "Bob"
    
    // Array access with variable index
    const index: int = 2;
    const third: int = numbers[index];
    IO::print_int(third);      // 3
    
    // Multi-dimensional arrays
    const matrix: int[][] = [[1, 2], [3, 4], [5, 6]];
    const element: int = matrix[1][0];  // Should be 3
    IO::println("Matrix element:");
    IO::print_int(element);
    
    return 0;
}