tests/fixtures/invalid_programs/array_bounds.cryo
namespace Main;

import IO from <io/stdio>;

function main() -> int {
    const numbers: int[] = [1, 2, 3];
    
    // Array bounds error
    const out_of_bounds: int = numbers[10];  // Should cause error
    
    return 0;
}